feat: 主题变量设置

--- a/src/app.less
+++ b/src/app.less
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'zhuziAwan';
+  src: url('./assets/font/zhuziawan.ttf');
+}
+
 html,
 body,
 #root {
