--- a/src/styles/variable.less
+++ b/src/styles/variable.less
@@ -1,11 +1,18 @@
-// 这里注入全局变量 不用引入 可以直接使用
-@primaryColor: #a6abe2;
-@successColor: #8ee5c6;
-@warningColor: #fd91a5;
+@primaryColor: #39c5bb;
+@auxiliaryColor1: #ff6d6d;
+@auxiliaryColor2: #ffa500;
 
-@textColor: #261f31;
+@successColor: #8ee5c6;
+
+@warningColor: #ffa500;
+
+@errorColor: #ff4b2c;
+@auxiliaryErrorColor: #ff416b;
+
+@textColor: #0a2222;
+@textAuxiliaryColor1: #797979;
+
 @bgColor: #eeeaf4;
 
-// 侧边栏宽度
-@sideBarWidth: 60px;
-
+@globalFontSize: 14px;
+@globalFontFamily: 'zhuziAwan';
