--- a/src/app.less
+++ b/src/app.less
@@ -12,6 +12,10 @@
   font-family: 'zhuziAwan';
   src: url('./assets/font/zhuziawan.ttf');
 }
+@font-face {
+  font-family: 'mono';
+  src: url('./assets/font/JetBrainsMono-Medium.ttf');
+}
 
 html,
 body,
