--- a/src/pages/login/styles.less
+++ b/src/pages/login/styles.less
@@ -1,9 +1,87 @@
 @import '../../styles/variable.less';
 
+// 基础面板宽度
+@panelWidth: 360px;
+// 容器高度
+@containerHeight: 450px;
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
+
+  .box {
+    width: @panelWidth * 2;
+    height: @containerHeight;
+    background-color: fade(@primaryColor, 20%);
+    border-radius: 16px;
+    overflow: hidden;
+    opacity: 0.8;
+  }
+
+  .slider-page {
+    width: @panelWidth * 3;
+    height: @containerHeight;
+    transition: all 0.6s;
+    opacity: 0.8;
+    display: flex;
+  }
+  .is-login {
+    transform: translateX(-@panelWidth);
+  }
+}
+
+.reg {
+}
+
+.middle {
+  flex: 1 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: @auxiliaryColor1;
+  opacity: 0.6;
+
+  .btn {
+    background: transparent;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 12px 32px;
+    border: 1px #fff solid;
+    color: #fff;
+    border-radius: 60px;
+    user-select: none;
+    transition: all 0.6s cubic-bezier(0.075, 1.2, 0.665, 1);
+
+    &:active {
+      transform: scale(0.9);
+    }
+
+    &:hover {
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+
+.login {
+}
+
+.page {
+  flex: 1 0 0;
+
+  .form {
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .title {
+      user-select: none;
+    }
+  }
 }
