feat: login 布局搭建

--- a/src/app.less
+++ b/src/app.less
@@ -8,6 +8,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'zhuziAwan';
+  -webkit-tap-highlight-color: transparent;
 }
 
 @font-face {
@@ -61,4 +62,27 @@ body,
 
 .medium-zoom-image--opened {
   z-index: 1000;
+}
+
+.bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  animation: 2s ease 0s 1 normal none running header-effect;
+  object-fit: cover;
+  user-select: none;
+}
+
+@keyframes header-effect {
+  from {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
