--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -6,7 +6,6 @@
 .container {
   position: relative;
   color: @color;
-  background: @bg;
   min-height: 100vh;
 }
 
@@ -20,10 +19,12 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10000;
 }
 
 .tool-bar {
   position: fixed;
   right: 0;
   bottom: 0;
+  z-index: 10000;
 }
