--- a/src/app.less
+++ b/src/app.less
@@ -2,6 +2,7 @@
 @import 'nprogress/nprogress.css';
 @import './styles/variable.less';
 @import './styles/base.less';
+@import './styles/antd.less';
 
 * {
   margin: 0;
