--- a/src/pages/login/styles.less
+++ b/src/pages/login/styles.less
@@ -27,6 +27,7 @@
     transition: all 0.6s;
     // opacity: 0.8;
     display: flex;
+    position: relative;
   }
   .is-login {
     transform: translateX(-@panelWidth);
@@ -34,7 +35,7 @@
 }
 
 @media (max-width: (2 * @panelWidth)) {
-  @panelWidth: 90vw;
+  @panelWidth: 80vw;
   .container {
     .box {
       width: @panelWidth;
@@ -53,6 +54,9 @@
           }
           .text {
             margin-bottom: 0;
+          }
+          .qr-box {
+            display: none;
           }
         }
       }
@@ -73,6 +77,7 @@
 
 .middle {
   flex: 1 0 0;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -112,10 +117,18 @@
 }
 
 .login {
+  .qr-box {
+    margin-top: 8px;
+    user-select: none;
+    cursor: pointer;
+    padding: 12px 16px;
+    transition: all 0.3s;
+  }
 }
 
 .page {
   flex: 1 0 0;
+  overflow: hidden;
 
   .form {
     height: 100%;
