feat: 登录页适配夜间模式

--- a/src/pages/login/styles.less
+++ b/src/pages/login/styles.less
@@ -230,5 +230,11 @@
     cursor: pointer;
     border: 1px solid #d9d9d9;
     user-select: none;
+    color: var(--current-color);
+  }
+
+  .submit-btn {
+    color: var(--current-color) !important;
+    background: var(--current-bg) !important;
   }
 }
