--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -22,4 +22,10 @@ body {
       }
     }
   }
+  .ant-popover {
+    .ant-popover-inner {
+      background: @bg;
+      color: @color;
+    }
+  }
 }
