feat: 重构登录页面增强用户体验并适配夜间模式

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -11,6 +11,8 @@
   //暗色背景色
   --bg-color2: #242727;
 
+  --bg--transparent: rgba(0, 0, 0, 0.5);
+
   --current-color: var(--text-color);
   --current-bg: var(--bg-color);
 }
