--- a/src/components/Typewriter/styles.less
+++ b/src/components/Typewriter/styles.less
@@ -5,7 +5,7 @@
   padding: 24px 8px;
   font-size: 18px;
   border-radius: 8px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--bg--transparent);
   color: #fff;
 
   &::after {
