--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -12,14 +12,38 @@
 .header {
   height: @headerHeight;
   width: 100%;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
+  // box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.05);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 24px;
   position: fixed;
   top: 0;
   left: 0;
+  transform: translateY(0);
   z-index: 2000;
+  background: transparent;
+  transition:
+    background 0.3s ease-in-out,
+    opacity 0.3s ease-in-out 0.3s,
+    transform 0.3s ease-in-out;
+
+  &:hover {
+    background: var(--bg--transparent);
+  }
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(-100%);
+  transition:
+    background 0.3s ease-in-out,
+    opacity 0.3s ease-in-out,
+    transform 0.3s ease-in-out 0.3s;
+}
+
+.has-bg {
+  background: @bg!important;
 }
 
 .tool-bar {
