feat: 重构登录页面增强用户体验并适配夜间模式

--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -53,8 +53,13 @@
   bottom: 3vmax;
   z-index: 2000;
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 1vmax;
+
+  .scroll-height {
+    cursor: pointer;
+  }
 
   .icon {
     font-size: 24px;
