--- a/src/components/Typewriter/styles.less
+++ b/src/components/Typewriter/styles.less
@@ -2,11 +2,12 @@
   // font-family: 'zhuziAwan';
   display: inline-block;
   cursor: pointer;
-  padding: 24px 8px;
+  padding: 16px 8px;
   font-size: 18px;
   border-radius: 8px;
   background-color: var(--bg--transparent);
   color: #fff;
+  user-select: none;
 
   &::after {
     content: '|';
