--- a/src/styles/variable.less
+++ b/src/styles/variable.less
@@ -11,3 +11,8 @@
 
 @globalFontSize: 14px;
 @globalFontFamily: 'zhuziAwan';
+
+@bg: var(--current-bg);
+@color: var(--current-color);
+
+@transition: all 0.3s ease-in-out;
