--- a/src/pages/login/styles.less
+++ b/src/pages/login/styles.less
@@ -24,7 +24,7 @@
   .slider-page {
     width: @panelWidth * 3;
     height: @containerHeight;
-    transition: all 0.6s;
+    transition: @transition;
     // opacity: 0.8;
     display: flex;
     position: relative;
@@ -122,7 +122,7 @@
     user-select: none;
     cursor: pointer;
     padding: 12px 16px;
-    transition: all 0.3s;
+    transition: @transition;
   }
 }
 
