--- a/src/layout/components/styles.less
+++ b/src/layout/components/styles.less
@@ -79,4 +79,36 @@
       }
     }
   }
+
+  .mobile {
+    .icon {
+      color: @primaryColor;
+      font-size: 24px;
+    }
+  }
+}
+
+.mobileDrawer {
+  background: transparent !important;
+  color: #fff !important;
+
+  :global {
+    .ant-drawer-header {
+      &-title {
+        .ant-drawer-title {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+  .bg {
+    width: 70vw;
+    height: 100vh;
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    user-select: none;
+  }
 }
