--- a/src/layout/components/styles.less
+++ b/src/layout/components/styles.less
@@ -50,6 +50,12 @@
     }
   }
 
+  :global {
+    .ant-avatar-string {
+      transform: scale(1) !important;
+    }
+  }
+
   .menuItem {
     color: @auxiliaryColor1;
     font-size: 16px;
@@ -100,6 +106,12 @@
         }
       }
     }
+    .ant-drawer-body {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
   }
   .bg {
     width: 70vw;
@@ -110,5 +122,17 @@
     left: 0;
     object-fit: cover;
     user-select: none;
+  }
+
+  .menuItem {
+    font-size: 20px;
+    letter-spacing: 0.5em;
+    transition: @transition;
+    user-select: none;
+    transition-duration: 0.15s;
+
+    &:active {
+      transform: scale(0.95);
+    }
   }
 }
