feat: 背景图增加夜间模式显示

--- a/src/layout/components/styles.less
+++ b/src/layout/components/styles.less
@@ -122,6 +122,10 @@
     left: 0;
     object-fit: cover;
     user-select: none;
+    transition: @transition;
+  }
+  .darkBg {
+    filter: brightness(50%);
   }
 
   .menuItem {
