--- a/src/pages/login/styles.less
+++ b/src/pages/login/styles.less
@@ -85,7 +85,8 @@
   background: fade(@auxiliaryColor1, 60%);
   user-select: none;
   padding-bottom: 40px;
-  color: #fff;
+  // color: #fff;
+  color: mix(@primaryColor, #fff, 20%);
   // filter: contrast(15);
 
   .desc {
