feat: md编辑器 背景色 适配

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -12,9 +12,12 @@
   --bg-color2: #242727;
 
   --bg--transparent: rgba(0, 0, 0, 0.5);
+  --border-color: #e1e4e8;
+  --border-color2: #1e1b18;
 
   --current-color: var(--text-color);
   --current-bg: var(--bg-color);
+  --current-border: var(--border-color);
 }
 
 .img-bg {
