--- a/src/components/MDEditor/editor.less
+++ b/src/components/MDEditor/editor.less
@@ -44,6 +44,13 @@
   border-color: var(--current-border) !important;
 }
 
+.bytemd-sidebar {
+  transition: @transition;
+  background: @bg !important;
+  color: @color !important;
+  border-color: var(--current-border) !important;
+}
+
 .CodeMirror-cursors {
   .CodeMirror-cursor {
     border-color: @color !important;
