--- a/src/components/MDEditor/editor.less
+++ b/src/components/MDEditor/editor.less
@@ -20,6 +20,8 @@
   background: @bg !important;
   color: @color !important;
   border-color: var(--current-border);
+  position: relative;
+  z-index: 1000;
 }
 .bytemd-toolbar {
   transition: @transition;
