--- a/src/pages/editor/styles.less
+++ b/src/pages/editor/styles.less
@@ -114,4 +114,61 @@ body {
       }
     }
   }
+
+  .upload {
+    width: 300px;
+    aspect-ratio: 16 / 9;
+    border: 2px var(--current-border) dotted;
+    transition: @transition;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 16px;
+
+    .plus {
+      font-size: 24px;
+      color: @color;
+      transition: @transition;
+    }
+    .explain {
+      font-size: 18px;
+      color: @color;
+      transition: @transition;
+    }
+  }
+
+  .coverBox {
+    position: relative;
+    width: 300px;
+    aspect-ratio: 16 / 9;
+
+    .cover {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: @transition;
+    }
+
+    .darkImg {
+      filter: brightness(50%);
+    }
+
+    .delete {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      transition: @transition;
+      color: @color;
+      cursor: pointer;
+      background: @bg;
+      padding: 4px;
+      border-radius: 2px;
+
+      &:active {
+        transform: translateY(2px);
+      }
+    }
+  }
 }
