--- a/src/pages/components/styles.less
+++ b/src/pages/components/styles.less
@@ -27,5 +27,36 @@
 
   .container {
     width: min(90vw, 1400px);
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    padding-top: 24px;
+
+    .left {
+      width: 300px;
+      background: red;
+    }
+    .right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      // background: blue;
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .content {
+    .container {
+      flex-direction: column;
+
+      .left {
+        width: 100%;
+      }
+      .right {
+        width: 100%;
+      }
+    }
   }
 }
