--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -44,6 +44,12 @@
   filter: brightness(50%);
 }
 
+.markdown-body {
+  p {
+    color: @color;
+  }
+}
+
 @keyframes header-effect {
   from {
     opacity: 0;
@@ -52,5 +58,14 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes shark-txt {
+  form {
+    background-position: -100%;
+  }
+  to {
+    background-position: 200%;
   }
 }
