--- a/src/pages/components/styles.less
+++ b/src/pages/components/styles.less
@@ -73,7 +73,9 @@
       display: flex;
       flex-direction: column;
       gap: 24px;
+      overflow: hidden;
       // background: blue;
+      padding: 2px 16px;
     }
   }
 }
