feat: 文章详情 解析

--- a/src/pages/components/styles.less
+++ b/src/pages/components/styles.less
@@ -2,7 +2,7 @@
 
 .header {
   width: 100%;
-  height: 50vh;
+  height: 50vmin;
   display: flex;
   flex-direction: column;
   gap: 3vmin;
@@ -19,7 +19,7 @@
 .content {
   width: 100%;
   background: @bg;
-  min-height: 50vh;
+  min-height: calc(100vh - 50vmin);
   color: @color;
   transition: @transition;
   display: flex;
