--- a/src/components/Article/styles.less
+++ b/src/components/Article/styles.less
@@ -60,6 +60,10 @@
           color: var(--text-color1);
           font-size: 12px;
           align-items: center;
+          // justify-content: space-between;
+          > div {
+            white-space: nowrap;
+          }
         }
 
         .content {
