--- a/src/pages/article/components/styles.less
+++ b/src/pages/article/components/styles.less
@@ -8,13 +8,56 @@
     position: absolute;
     top: calc(@headerHeight + 50vmin);
     width: 200px;
-    right: 50px;
+    right: 50%;
+    transform: translateX(calc(400px + 200px));
     z-index: 1000;
+  }
+
+  .toolBar {
+    position: absolute;
+    top: calc(@headerHeight + 50vmin);
+    // width: 200px;
+    left: 50%;
+    transform: translateX(calc(-400px - 120px));
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    .float {
+      position: relative;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: @bg;
+      box-shadow:
+        0 6px 16px 0 var(--current-border),
+        0 3px 6px -4px var(--current-border),
+        0 9px 28px 8px var(--current-border);
+      cursor: pointer;
+      transition: @transition;
+
+      .icon {
+        transition: @transition;
+        font-size: 24px;
+        color: @color;
+      }
+      .activeIcon {
+        color: @primaryColor;
+      }
+      &:hover {
+        .icon {
+          color: @primaryColor;
+        }
+      }
+    }
   }
   .fixed {
     position: fixed;
     top: @headerHeight;
-    right: 50px;
   }
 }
 
