--- a/src/pages/article/styles.less
+++ b/src/pages/article/styles.less
@@ -2,6 +2,8 @@
 @import '../../styles/variable.less';
 
 .container {
+  overflow-x: hidden;
+
   .placeholder {
     height: 50vmin;
     width: 100%;
