--- a/src/pages/article/styles.less
+++ b/src/pages/article/styles.less
@@ -55,8 +55,9 @@
     min-height: calc(100vh - 50vmin);
     display: flex;
     justify-content: center;
-
-    .contentBox {
+    flex-direction: column;
+    align-items: center;
+    .commentBox {
       animation: 2s ease 0s 1 normal none running footer-effect;
     }
   }
