--- a/src/components/Article/styles.less
+++ b/src/components/Article/styles.less
@@ -47,6 +47,7 @@
           gap: 16px;
           color: var(--text-color1);
           font-size: 12px;
+          align-items: center;
 
           > div {
             display: flex;
