--- a/src/pages/article/components/styles.less
+++ b/src/pages/article/components/styles.less
@@ -107,6 +107,18 @@
   }
 }
 
+.comment {
+  .title {
+    margin: 16px 0;
+    color: @auxiliaryColor2;
+    font-size: 20px;
+    display: flex;
+    // align-items: center;
+    gap: 8px;
+    user-select: none;
+  }
+}
+
 @media (max-width: 1000px) {
   .content {
     .navbar {
