--- a/src/pages/article/components/styles.less
+++ b/src/pages/article/components/styles.less
@@ -5,7 +5,7 @@
   // position: relative;
   scroll-behavior: smooth;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   .articleContent {
     animation: 2s ease 0s 1 normal none running footer-effect;
 
