--- a/src/pages/essay/components/styles.less
+++ b/src/pages/essay/components/styles.less
@@ -1,11 +1,12 @@
 @import '../../../styles/variable.less';
+@import '../../../styles/animation.less';
 
 .header {
   width: 100%;
   height: 50vmin;
   display: flex;
   flex-direction: column;
-  gap: 3vmin;
+  gap: 2vmin;
   align-items: center;
   justify-content: center;
 
@@ -13,5 +14,29 @@
     font-size: 36px;
     color: @primaryColor;
     user-select: none;
+  }
+}
+
+.content {
+  width: 100%;
+  background: @bg;
+  min-height: calc(100vh - 50vmin);
+  color: @color;
+  transition: @transition;
+  display: flex;
+  justify-content: center;
+
+  .container {
+    background: @bg;
+    transition: @transition;
+    margin-top: -40px;
+    margin-bottom: 40px;
+    animation: 2s ease 0s 1 normal none running footer-effect;
+    box-shadow:
+      0 6px 16px 0 var(--current-border),
+      0 3px 6px -4px var(--current-border),
+      0 9px 28px 8px var(--current-border);
+    border-radius: 24px;
+    padding: 24px;
   }
 }
