--- a/src/pages/article/components/styles.less
+++ b/src/pages/article/components/styles.less
@@ -27,6 +27,8 @@
     right: 50%;
     transform: translateX(calc(400px + 200px));
     z-index: 1000;
+    min-height: 50vh;
+    overflow-y: auto;
   }
 
   .toolBar {
