--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -55,8 +55,9 @@
 .containerBox {
   width: min(80vw, 800px);
 }
-
 .markdown-navigation {
+  overflow-y: auto !important;
+  max-height: 274px;
   .title-anchor {
     color: @color !important;
     &:hover {
