--- a/src/components/Article/styles.less
+++ b/src/components/Article/styles.less
@@ -40,6 +40,8 @@
           user-select: none;
           font-size: 18px;
           margin: 12px 0;
+          color: @color;
+          transition: @transition;
         }
 
         .publishInfo {
@@ -77,6 +79,8 @@
           line-clamp: 5;
           -webkit-box-orient: vertical;
           letter-spacing: 2px;
+          color: @color;
+          transition: @transition;
         }
       }
 
