--- a/src/pages/components/styles.less
+++ b/src/pages/components/styles.less
@@ -47,11 +47,17 @@
         border-radius: 8px;
         padding: 16px;
         box-shadow: 0 5px 10px 5px var(--current-border);
+        .keyword {
+          background: @bg;
+          transition: @transition;
+          color: @color;
+        }
 
         .classItem {
           margin: 4px 0;
           padding: 4px 8px;
           width: 100%;
+          color: @color;
           transition: @transition;
           border-radius: 6px;
           cursor: pointer;
