--- a/src/pages/components/styles.less
+++ b/src/pages/components/styles.less
@@ -51,6 +51,10 @@
           background: @bg;
           transition: @transition;
           color: @color;
+
+          &::placeholder {
+            color: var(--text-color1);
+          }
         }
 
         .classItem {
