--- a/src/admin/layout/index.less
+++ b/src/admin/layout/index.less
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-between;
     transition: @transition;
+    border-bottom: 1px solid @border;
 
     :global {
       .ant-space-item {
@@ -50,11 +51,13 @@
   .sider {
     background: @bg;
     transition: @transition;
+    border-right: 1px solid @border;
 
     .menu {
       background: @bg;
       color: @color;
       transition: @transition;
+      border-inline-end: none;
       :global {
         .ant-menu-item {
           .ant-menu-inline-collapsed-noicon {
@@ -84,12 +87,17 @@
       }
     }
   }
+
+  // .content {
+  // }
 }
 
 :global {
   .ant-layout {
     height: 100%;
-
+    background: @bg;
+    color: @color;
+    transition: @transition;
     // &-header {
     //   background: @bg !important;
     // }
@@ -98,6 +106,7 @@
       .ant-layout-sider-trigger {
         background: @bg !important;
         transition: @transition;
+        border-right: 1px solid @border;
 
         .anticon {
           color: @color;
